# rust-basics

./: Cargo.toml  README.md
examples/: README.md
examples/00-axum-html/: Cargo.toml  README.md
examples/00-axum-html/src/: main.rs
examples/01-hello-ssr/: Cargo.toml  README.md
examples/01-hello-ssr/src/: app.rs  main.rs
examples/02-counter/: Cargo.toml  README.md
examples/02-counter/src/: app.rs  main.rs
examples/03-server-fn-example/: Cargo.toml  README.md
examples/03-server-fn-example/src/: app.rs  main.rs
