[package]
name = "server_fn_example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true }
leptos_meta = { workspace = true }
leptos_router = { workspace = true }
axum = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
leptos_axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
wasm-bindgen = { workspace = true, optional = true }
serde = { workspace = true }

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[package.metadata.leptos]
output-name = "server_fn_example"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "127.0.0.1:3020"
reload-port = 3021
browserquery = "defaults"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
